package boundly.menu;

public abstract class Menu
{
  public Menu() {}
}
