package boundly.mode;

public abstract class Mode
{
  public Mode() {}

  public abstract void exec();
}

