package Boundly.Mode;

public class DebugMode extends Mode {
  public DebugMode() {
    super();
  }

  public void exec() {}
}
