package Controller.RunStrategy.RunStyle;

public abstract class RunStyle
{
    
  public RunStyle()
  {
  }

  public abstract void transform();
}
