package boundly.menu;

public class Exec extends Menu
{
	public Exec()
	{
		super();
	}
}
