package boundly.menu;

public class Select extends Menu
{
	public Select()
	{
		super();
	}
	public void hoge()
	{
		System.out.println("a");
	}
}
